--- a/GuessThatImage/res/values/strings.xml
+++ b/GuessThatImage/res/values/strings.xml
@@ -4,5 +4,17 @@
     <string name="app_name">GuessThatImage</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="login_title">Please Login WIth Your Account!</string>
+    <string name="enter_username">Please Enter Your User Name:</string>
+    <string name="enter_password">Please Enter Your Password:</string>
+    <string name="login">Login</string>
+    <string name="exit">Exit</string>
+    <string name="new_user">Sign up new account</string>
+    <string name="splash_title">Hopefully We Will Have a Nice Splash Screen</string>
+    <string name="title">Guess That Image!</string>
+    <string name="new_game">Start New Game</string>
+    <string name="settings">Game Settings</string>
+    <string name="help">Help</string>
+    <string name="leader_board">Leader Board</string>
 
 </resources>
