--- a/GuessThatImage/res/values/strings.xml
+++ b/GuessThatImage/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="confirm_password">Comfirm Your Password</string>
     <string name="signup_done">Sign up!</string>
     <string name="title_activity_signup">signup</string>
-
+    <string name="title_activity_leader_board">LeaderBoard</string>
+    <string name="leader_board_title">Leader Board</string>
 
 </resources>
